--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="vi">
 <head>
 <meta charset="UTF-8">
-<title>Dashboard lô hàng</title>
+<title>Dashboard lô hàng nội địa</title>
 
 <style>
 body {
@@ -101,100 +101,34 @@ th, td {
 
     <div class="cards">
         <div class="card">
-            <h4>Lô hàng hôm nay</h4>
-            <p><b>3</b> lô đã ghi nhận</p>
+            <h4>Đơn hôm nay</h4>
+            <p><b>12</b> đơn đã tạo</p>
         </div>
         <div class="card">
             <h4>Đang vận chuyển</h4>
-            <p><b>2</b> lô</p>
+            <p><b>5</b> đơn</p>
         </div>
         <div class="card">
-            <h4>Hoàn tất</h4>
-            <p><b>1</b> lô</p>
+            <h4>Đã giao</h4>
+            <p><b>7</b> đơn</p>
         </div>
     </div>
 
-    <h4>Lô hàng mới nhất</h4>
-    <table>
-        <tr>
-            <th>Mã lô</th>
-            <th>Tuyến</th>
-            <th>Loại hàng</th>
-            <th>Trạng thái</th>
-        </tr>
-        <tr>
-            <td>LH202601</td>
-            <td>HAN – NRT</td>
-            <td>Vaccine</td>
-            <td class="status processing">Đang xử lý</td>
-        </tr>
-    </table>
-</div>
-
-<!-- LÔ HÀNG -->
-<div id="shipment" class="section">
-    <h3>Chi tiết lô hàng</h3>
-
-    <p><b>Mã lô:</b> LH202601</p>
-    <p><b>Khối lượng:</b> 800 kg</p>
-    <p><b>Container:</b> RKN Envirotainer</p>
-    <p><b>Nhiệt độ:</b> -70°C</p>
-
-    <h4>Tiến trình vận chuyển</h4>
-    <ul class="timeline">
-        <li>✔ Ghi nhận lô hàng tại HAN</li>
-        <li>✔ Xuất kho</li>
-        <li>⏳ Trung chuyển ICN</li>
-        <li>⬜ Đến NRT</li>
-    </ul>
-</div>
-
-<!-- COD -->
-<div id="cod" class="section">
-    <h3>Đối soát COD</h3>
-
+    <h4>Đơn hàng mới nhất</h4>
     <table>
         <tr>
             <th>Mã đơn</th>
-            <th>COD</th>
-            <th>Đã thu</th>
+            <th>Tuyến</th>
+            <th>Loại hàng</th>
+            <th>Giá trị</th>
             <th>Trạng thái</th>
         </tr>
         <tr>
-            <td>DH001</td>
-            <td>500,000</td>
-            <td>500,000</td>
-            <td class="success">Đã đối soát</td>
-        </tr>
-        <tr>
-            <td>DH002</td>
-            <td>300,000</td>
-            <td>0</td>
-            <td class="pending">Chưa đối soát</td>
+            <td>DH-HCM-DN-001</td>
+            <td>TP.HCM → Đà Nẵng</td>
+            <td>Quần áo</td>
+            <td>230,000 đ</td>
+            <td class="status processing">Đang giao</td>
         </tr>
     </table>
-</div>
-
-<!-- TÀI KHOẢN -->
-<div id="account" class="section">
-    <h3>Thông tin tài khoản</h3>
-    <p><b>Tên:</b> Người dùng demo</p>
-    <p><b>Vai trò:</b> Khách hàng</p>
-    <p><b>Email:</b> demo@email.com</p>
-</div>
-
-</div>
-</div>
-
-<script>
-function showPage(page) {
-    document.querySelectorAll('.section').forEach(p => p.classList.remove('active'));
-    document.getElementById(page).classList.add('active');
-}
-function logout() {
-    alert("Đã đăng xuất!");
-}
-</script>
-
-</body>
-</html>
+</d
