--- a/index.html
+++ b/index.html
@@ -28,208 +28,4 @@ body {
     display: block;
     padding: 12px 20px;
     color: white;
-    text-decoration: none;
-    cursor: pointer;
-}
-.sidebar a:hover {
-    background: #162b63;
-}
-.content {
-    flex: 1;
-    padding: 25px;
-}
-.section {
-    display: none;
-    background: white;
-    padding: 20px;
-    border-radius: 6px;
-}
-.active {
-    display: block;
-}
-.cards {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.card {
-    background: #eef2ff;
-    padding: 15px;
-    border-radius: 6px;
-    flex: 1;
-}
-table {
-    width: 100%;
-    border-collapse: collapse;
-}
-th, td {
-    border: 1px solid #ddd;
-    padding: 8px;
-    text-align: center;
-}
-.status {
-    font-weight: bold;
-}
-.success { color: green; }
-.processing { color: orange; }
-.pending { color: red; }
-.timeline li {
-    margin-bottom: 8px;
-}
-</style>
-</head>
-
-<body>
-<div class="container">
-
-<!-- MENU -->
-<div class="sidebar">
-    <h2>LOGISTICS</h2>
-    <a onclick="showPage('home')">🏠 Trang chủ</a>
-    <a onclick="showPage('shipment')">📦 Lô hàng</a>
-    <a onclick="showPage('cod')">💰 Đối soát COD</a>
-    <a onclick="showPage('account')">👤 Tài khoản</a>
-    <a onclick="logout()">🚪 Đăng xuất</a>
-</div>
-
-<!-- NỘI DUNG -->
-<div class="content">
-
-<!-- TRANG CHỦ -->
-<div id="home" class="section active">
-    <h3>Trang chủ</h3>
-
-    <div class="cards">
-        <div class="card">
-            <h4>Lô hàng hôm nay</h4>
-            <p><b>3</b> lô đã ghi nhận</p>
-        </div>
-        <div class="card">
-            <h4>Đang vận chuyển</h4>
-            <p><b>2</b> lô</p>
-        </div>
-        <div class="card">
-            <h4>Hoàn tất</h4>
-            <p><b>1</b> lô</p>
-        </div>
-    </div>
-
-   <h4>Lô hàng mới nhất</h4>
-<table>
-    <tr>
-        <th>Mã lô</th>
-        <th>Tuyến</th>
-        <th>Loại hàng</th>
-        <th>Giá trị</th>
-        <th>Trạng thái</th>
-    </tr>
-    <tr>
-        <td>LH202601</td>
-        <td>TP.HCM – Đà Nẵng</td>
-        <td>Quần Jean (Size L)</td>
-        <td>230,000 đ</td>
-        <td class="status processing">Đang vận chuyển</td>
-    </tr>
-</table>
-</div>
-
-<!-- LÔ HÀNG -->
-<div id="shipment" class="section">
-    <h3>Chi tiết lô hàng</h3>
-
-    <p><b>Mã lô:</b> LH202601</p>
-    <p><b>Loại hàng:</b> Quần Jean nam, size L</p>
-    <p><b>Số lượng:</b> 1 chiếc</p>
-    <p><b>Khối lượng:</b> 600 g</p>
-    <p><b>Giá trị đơn hàng:</b> 230,000 VNĐ</p>
-    <p><b>Đóng gói:</b> Túi PE + thùng carton</p>
-    <p><b>Hình thức vận chuyển:</b> Đường bộ nội địa</p>
-    <p><b>Tuyến vận chuyển:</b> TP. Hồ Chí Minh → Đà Nẵng</p>
-    <p><b>Thời gian dự kiến:</b> 2 – 3 ngày</p>
-
-    <h4>Tiến trình vận chuyển</h4>
-    <ul class="timeline">
-        <li>✔ Nhận hàng tại kho TP. Hồ Chí Minh</li>
-        <li>✔ Phân loại tại trung tâm khai thác</li>
-        <li>⏳ Đang vận chuyển ra Đà Nẵng</li>
-        <li>⬜ Giao hàng cho người nhận</li>
-    </ul>
-</div>
-
-<!-- COD -->
-<div id="cod" class="section">
-    <h3>Đối soát COD</h3>
-
-    <table>
-        <tr>
-            <th>Mã đơn</th>
-            <th>COD</th>
-            <th>Đã thu</th>
-            <th>Trạng thái</th>
-        </tr>
-        <tr>
-            <td>DH001</td>
-            <td>500,000</td>
-            <td>500,000</td>
-            <td class="success">Đã đối soát</td>
-        </tr>
-        <tr>
-            <td>DH002</td>
-            <td>300,000</td>
-            <td>0</td>
-            <td class="pending">Chưa đối soát</td>
-        </tr>
-    </table>
-</div>
-
-<!-- TÀI KHOẢN -->
-<div id="account" class="section">
-    <h3>Thông tin tài khoản</h3>
-    <p><b>Tên:</b> Người dùng demo</p>
-    <p><b>Vai trò:</b> Khách hàng</p>
-    <p><b>Email:</b> demo@email.com</p>
-</div>
-
-</div>
-</div>
-
-<script>
-function showPage(page) {
-    document.querySelectorAll('.section').forEach(p => p.classList.remove('active'));
-    document.getElementById(page).classList.add('active');
-}
-function logout() {
-    alert("Đã đăng xuất!");
-}
-</script>
-<script>
-/* LIÊN KẾT LÔ HÀNG & COD THEO MÃ LH202601 */
-(function syncShipmentAndCOD() {
-    const shipmentStatus = document.querySelector(
-        "#home td.status"
-    );
-
-    const codRows = document.querySelectorAll("#cod table tr");
-
-    codRows.forEach(row => {
-        const cells = row.querySelectorAll("td");
-        if (cells.length && cells[0].innerText === "LH202601") {
-
-            // Nếu lô hàng đã giao
-            if (shipmentStatus.innerText.includes("Đã giao")) {
-                cells[2].innerText = "230,000";
-                cells[3].innerText = "Đã đối soát";
-                cells[3].className = "success";
-            } 
-            // Nếu lô hàng chưa giao
-            else {
-                cells[2].innerText = "0";
-                cells[3].innerText = "Chưa thu";
-                cells[3].className = "pending";
-            }
-        }
-    });
-})();
-</script>
-</body>
-</html>
+    text
