--- a/index.html
+++ b/index.html
@@ -28,4 +28,165 @@ body {
     display: block;
     padding: 12px 20px;
     color: white;
-    text
+    text-decoration: none;
+    cursor: pointer;
+}
+.sidebar a:hover {
+    background: #162b63;
+}
+.content {
+    flex: 1;
+    padding: 25px;
+}
+.section {
+    display: none;
+    background: white;
+    padding: 20px;
+    border-radius: 6px;
+}
+.active {
+    display: block;
+}
+.cards {
+    display: flex;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+.card {
+    background: #eef2ff;
+    padding: 15px;
+    border-radius: 6px;
+    flex: 1;
+}
+table {
+    width: 100%;
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid #ddd;
+    padding: 8px;
+    text-align: center;
+}
+.status { font-weight: bold; }
+.success { color: green; }
+.processing { color: orange; }
+.pending { color: red; }
+</style>
+</head>
+
+<body>
+<div class="container">
+
+<!-- MENU -->
+<div class="sidebar">
+    <h2>LOGISTICS</h2>
+    <a onclick="showPage('home')">🏠 Trang chủ</a>
+    <a onclick="showPage('shipment')">📦 Lô hàng</a>
+    <a onclick="showPage('cod')">💰 Đối soát COD</a>
+    <a onclick="showPage('account')">👤 Tài khoản</a>
+    <a onclick="logout()">🚪 Đăng xuất</a>
+</div>
+
+<div class="content">
+
+<!-- HOME -->
+<div id="home" class="section active">
+<h3>Trang chủ</h3>
+
+<div class="cards">
+    <div class="card">
+        <h4>Lô hàng hôm nay</h4>
+        <p><b>1</b> lô</p>
+    </div>
+    <div class="card">
+        <h4>Đang vận chuyển</h4>
+        <p><b>1</b> lô</p>
+    </div>
+    <div class="card">
+        <h4>Hoàn tất</h4>
+        <p><b>0</b> lô</p>
+    </div>
+</div>
+
+<table>
+<tr>
+    <th>Mã lô</th>
+    <th>Tuyến</th>
+    <th>Giá trị</th>
+    <th>Trạng thái</th>
+</tr>
+<tr>
+    <td>LH202601</td>
+    <td>TP.HCM – Đà Nẵng</td>
+    <td>230,000 đ</td>
+    <td id="shipmentStatus" class="status processing">Đang vận chuyển</td>
+</tr>
+</table>
+</div>
+
+<!-- SHIPMENT -->
+<div id="shipment" class="section">
+<h3>Chi tiết lô hàng LH202601</h3>
+<p><b>Hàng hóa:</b> Quần Jean nam</p>
+<p><b>Giá trị:</b> 230,000 VNĐ</p>
+<button onclick="markDelivered()">✔ Đánh dấu đã giao</button>
+</div>
+
+<!-- COD -->
+<div id="cod" class="section">
+<h3>Đối soát COD</h3>
+
+<table>
+<tr>
+    <th>Mã lô</th>
+    <th>COD</th>
+    <th>Đã thu</th>
+    <th>Trạng thái</th>
+</tr>
+<tr>
+    <td>LH202601</td>
+    <td>230,000</td>
+    <td id="codCollected">0</td>
+    <td id="codStatus" class="pending">Chưa thu</td>
+</tr>
+</table>
+</div>
+
+<!-- ACCOUNT -->
+<div id="account" class="section">
+<h3>Tài khoản</h3>
+<p>Tên: Người dùng demo</p>
+</div>
+
+</div>
+</div>
+
+<script>
+function showPage(page) {
+    document.querySelectorAll('.section').forEach(s => s.classList.remove('active'));
+    document.getElementById(page).classList.add('active');
+}
+
+function logout() {
+    alert("Đã đăng xuất!");
+}
+
+/* ĐÁNH DẤU ĐÃ GIAO → TỰ ĐỘNG ĐỐI SOÁT COD */
+function markDelivered() {
+    const shipmentStatus = document.getElementById("shipmentStatus");
+    const codCollected = document.getElementById("codCollected");
+    const codStatus = document.getElementById("codStatus");
+
+    shipmentStatus.innerText = "Đã giao";
+    shipmentStatus.className = "status success";
+
+    codCollected.innerText = "230,000";
+    codStatus.innerText = "Đã đối soát";
+    codStatus.className = "success";
+
+    alert("Lô hàng đã giao – COD đã đối soát");
+}
+</script>
+
+</body>
+</html>
