--- a/index.html
+++ b/index.html
@@ -10,9 +10,7 @@ body {
     font-family: Arial, sans-serif;
     background: #f4f6f9;
 }
-.container {
-    display: flex;
-}
+.container { display: flex; }
 .sidebar {
     width: 230px;
     background: #1f3c88;
@@ -31,33 +29,15 @@ body {
     text-decoration: none;
     cursor: pointer;
 }
-.sidebar a:hover {
-    background: #162b63;
-}
-.content {
-    flex: 1;
-    padding: 25px;
-}
+.sidebar a:hover { background: #162b63; }
+.content { flex: 1; padding: 25px; }
 .section {
     display: none;
     background: white;
     padding: 20px;
     border-radius: 6px;
 }
-.active {
-    display: block;
-}
-.cards {
-    display: flex;
-    gap: 20px;
-    margin-bottom: 20px;
-}
-.card {
-    background: #eef2ff;
-    padding: 15px;
-    border-radius: 6px;
-    flex: 1;
-}
+.active { display: block; }
 table {
     width: 100%;
     border-collapse: collapse;
@@ -92,44 +72,6 @@ th, td {
 <!-- HOME -->
 <div id="home" class="section active">
 <h3>Trang chủ</h3>
-
-<div id="cod" class="section">
-<h3>Đối soát COD</h3>
-
-<table>
-<tr>
-    <th>Mã lô</th>
-    <th>COD</th>
-    <th>Đã thu</th>
-    <th>Trạng thái</th>
-</tr>
-
-<!-- ĐƠN 1: ĐÃ ĐỐI SOÁT -->
-<tr>
-    <td>LH202601</td>
-    <td>230,000</td>
-    <td>230,000</td>
-    <td class="success">Đã đối soát</td>
-</tr>
-
-<!-- ĐƠN 2: CHỜ ĐỐI SOÁT -->
-<tr>
-    <td>LH202602</td>
-    <td>450,000</td>
-    <td>0</td>
-    <td class="pending">Chờ đối soát</td>
-</tr>
-
-<!-- ĐƠN 3: THẤT BẠI / HOÀN -->
-<tr>
-    <td>LH202603</td>
-    <td>320,000</td>
-    <td>0</td>
-    <td class="processing">Thất bại / Hoàn COD</td>
-</tr>
-
-</table>
-</div>
 
 <table>
 <tr>
@@ -172,6 +114,18 @@ th, td {
     <td id="codCollected">0</td>
     <td id="codStatus" class="pending">Chưa thu</td>
 </tr>
+<tr>
+    <td>LH202602</td>
+    <td>450,000</td>
+    <td>0</td>
+    <td class="pending">Chờ đối soát</td>
+</tr>
+<tr>
+    <td>LH202603</td>
+    <td>320,000</td>
+    <td>0</td>
+    <td class="processing">Thất bại / Hoàn COD</td>
+</tr>
 </table>
 </div>
 
@@ -194,7 +148,6 @@ function logout() {
     alert("Đã đăng xuất!");
 }
 
-/* ĐÁNH DẤU ĐÃ GIAO → TỰ ĐỘNG ĐỐI SOÁT COD */
 function markDelivered() {
     const shipmentStatus = document.getElementById("shipmentStatus");
     const codCollected = document.getElementById("codCollected");
